# claim-denial-prediction

./: .env.example  .gitignore  Makefile  README.md  TRACKER.md  claim_denial_pipeline_3-3.ipynb  colab_pipeline.ipynb  docker-compose.yml  phase4_pipeline.ipynb  pyproject.toml
.github/workflows/: ci.yml
docs/: ai_prompts_phase4.md  team-update-2026-07-23.md  unified_data_architecture.md
docs/adr/: 0001-package-per-phase.md  0002-faiss-over-pgvector.md  0003-gcp-over-aws-azure.md
mlops_platform/: requirements.txt
mlops_platform/demo/: app.py
mlops_platform/docker/: Dockerfile.api
mlops_platform/mlflow/: Dockerfile
mlops_platform/serving/: app.py
phase1_baseline/: README.md  requirements.txt
phase1_baseline/src/: train.py
phase2_gbm_shap/: README.md
phase2_gbm_shap/src/: train.py
phase3_clinicalbert/: README.md  requirements.txt
phase3_clinicalbert/src/: llm_baseline.py  pipeline.py  text_encoder.py
phase4_rag_agentic/: requirements.txt
phase4_rag_agentic/artifacts/: ablation_summary.json  metrics.json
phase4_rag_agentic/src/: agentic_predictor.py  data_gen.py  evidence_data_gen.py  evidence_policies.py  evidence_retriever.py  evidence_retriever_semantic.py  features.py  harmonization.py  label_audit.py  labeling.py  llm_demo.py  pipeline.py  plots.py  retriever.py
phase4_rag_agentic/tests/: test_retriever.py
scripts/: run_all_phases.py  run_phase4.py
shared/config/: settings.py
shared/schemas/: claim.py
shared/utils/: eval.py
